Fix align text to right #229

--- a/app/scripts/RebooEditor/styles.scss
+++ b/app/scripts/RebooEditor/styles.scss
@@ -27,6 +27,6 @@
     text-align: center;
   }
   .alignment--right {
-    text-align: left;
+    text-align: right;
   }
 }
